Bug 1139388 - Remove superfluous locking in the OS X profiler implementation to fix deadlock. (r=mstange)